--- a/pivot-project/src/App.css
+++ b/pivot-project/src/App.css
@@ -1,22 +1,21 @@
 .custom-scrollbar::-webkit-scrollbar {
-  width: 6px; /* Narrower scrollbar width */
+  width: 6px;
 }
 
 .custom-scrollbar::-webkit-scrollbar-thumb {
-  background-color: #888; /* Scrollbar thumb color */
-  border-radius: 4px; /* Rounded corners */
-}
-
-.custom-scrollbar::-webkit-scrollbar-thumb:hover {
-  background-color: #555; /* Darker on hover */
-}
-
-.custom-scrollbar::-webkit-scrollbar-track {
-  background-color: #f1f1f1; /* Track color */
+  background-color: #888;
   border-radius: 4px;
 }
 
-/* Hide up and down buttons */
+.custom-scrollbar::-webkit-scrollbar-thumb:hover {
+  background-color: #555;
+}
+
+.custom-scrollbar::-webkit-scrollbar-track {
+  background-color: #f1f1f1;
+  border-radius: 4px;
+}
+
 .custom-scrollbar::-webkit-scrollbar-button {
   display: none;
 }
